--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -7,13 +7,24 @@
   "author": "SAM CLI",
   "license": "MIT",
   "dependencies": {
-    "axios": ">=1.6.0"
+    "axios": "1.6.0",
+    "@aws-sdk/client-dynamodb": "3.478.0",
+    "@aws-sdk/client-s3": "3.478.0",
+    "@aws-sdk/util-dynamodb": "3.478.0",
+    "dotenv": "16.4.7",
+    "fs": "0.0.1-security",
+    "jimp": "0.22.10",
+    "mime-types": "2.1.35",
+    "node-geocoder": "4.3.0",
+    "path": "0.12.7",
+    "uuid": "9.0.1"
   },
   "scripts": {
-    "test": "mocha tests/unit/"
+    "test": "mocha tests/unit/",
+    "clean": "rm -rf node_modules"
   },
   "devDependencies": {
-    "chai": "^4.3.6",
-    "mocha": "^10.1.0"
+    "chai": "4.3.6",
+    "mocha": "10.1.0"
   }
 }
