--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -17,6 +17,7 @@
     "mime-types": "2.1.35",
     "node-geocoder": "4.3.0",
     "path": "0.12.7",
+    "sharp": "0.32.6",
     "uuid": "9.0.1"
   },
   "scripts": {
