added service role and scheduling 2

--- a/template.yaml
+++ b/template.yaml
@@ -23,19 +23,20 @@ Resources:
           AWS_REGION: !Ref AWS::Region
           DYNAMO_DB_TABLE: testCrawlerTable
           S3_BUCKET_NAME: test-s3-crawler-allev
+          USER_OWNER_ID: d7fcb4d4-3b8d-4979-a4f9-080e7886f9e2
       Events:
         CaliforniaSchedule:
           Type: Schedule
           Properties:
             Schedule: cron(0 22 * * ? *)  # 10:00 PM UTC
-            Name: CaliforniaVolunteerSearch
+            Name: AlabamaVolunteerSearch
             Description: "Trigger volunteer search for CA at 10:00 PM"
             Input: '{"location": "AL"}'
         TexasSchedule:
           Type: Schedule
           Properties:
             Schedule: cron(0 23 * * ? *)  # 11:00 PM UTC
-            Name: TexasVolunteerSearch
+            Name: CaliforniaVolunteerSearch
             Description: "Trigger volunteer search for TX at 11:00 PM"
             Input: '{"location": "CA"}'
         HelloWorld:
