--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -11,6 +11,7 @@
     "@aws-sdk/client-dynamodb": "3.478.0",
     "@aws-sdk/client-s3": "3.478.0",
     "@aws-sdk/util-dynamodb": "3.478.0",
+    "@aws-sdk/client-ssm": "3.731.1",
     "dotenv": "16.4.7",
     "fs": "0.0.1-security",
     "mime-types": "2.1.35",
