--- a/samconfig.toml
+++ b/samconfig.toml
@@ -3,7 +3,7 @@
 version = 0.1
 
 [default.global.parameters]
-stack_name = "samhw"
+stack_name = "crawler"
 
 [default.build.parameters]
 cached = true
@@ -16,7 +16,7 @@ lint = true
 capabilities = "CAPABILITY_IAM"
 confirm_changeset = true
 resolve_s3 = true
-s3_prefix = "samhw"
+s3_prefix = "crawler"
 region = "us-east-1"
 image_repositories = []
 
